--- a/stage/html/homepage.pug
+++ b/stage/html/homepage.pug
@@ -11,4 +11,7 @@ html(lang="en")
     .page.home-page
       include pug/layout/sidebar
       .content-area 
-        h1 #{pageTitle}
+        .header 
+        
+        .content
+          h1 #{pageTitle}
