--- a/stage/html/homepage.pug
+++ b/stage/html/homepage.pug
@@ -11,7 +11,7 @@ html(lang="en")
     .page.home-page
       include pug/layout/sidebar
       .content-area 
-        .header 
-        
+        include pug/layout/header
         .content
           h1 #{pageTitle}
+  include pug/layout/script
