--- a/stage/css/sass/layout/_global.scss
+++ b/stage/css/sass/layout/_global.scss
@@ -7,13 +7,16 @@
   min-height: 100vh;
   .content-area {
     width: calc(100% - 250px);
-    min-height: 100%;
+    min-height: 100vh;
     transition: 0.3s;
     float: right;
     will-change: width;
+    background: #f2f1f6;
     &.no-sidebar {
       width: 100%;
     }
+    .content h1 {
+      font-weight: bold;
+    }
   }
 }
-
