--- a/stage/css/sass/layout/_sidebar.scss
+++ b/stage/css/sass/layout/_sidebar.scss
@@ -5,9 +5,10 @@
     top: 0;
     left: 0;
     height: 100%;
-    background: #eee;
+    background: #292c33;
+    color: #fff;
     padding: 15px;
-    transition: .3s;
+    transition: 0.3s;
     &.no-sidebar {
       left: -250px;
     }
