--- a/stage/html/pug/layout/style.pug
+++ b/stage/html/pug/layout/style.pug
@@ -1,2 +1,3 @@
 link(rel="stylesheet" href="css/main.css")
+link(rel="stylesheet" href="css/bootstrap.min.css")
 script(src="https://kit.fontawesome.com/f97b7ad4e5.js" crossorigin="anonymous")
