--- a/stage/html/pug/layout/sidebar.pug
+++ b/stage/html/pug/layout/sidebar.pug
@@ -1,1 +1,21 @@
-.sidebar Sidebar
+.sidebar 
+  .logo-area.text-center Marwan
+  ul.links-area.list-unstyled
+    li: a(href='#') Homepage
+    li 
+      a.toggle-submenu(href='#') 
+        | Forms
+        i.fa-solid.fa-angle-right
+      ul.child-links.list-unstyled
+        li: a(href="#") Input 
+        li: a(href="#") Textarea 
+        li: a(href="#") Checkbox 
+        li: a(href="#") Radio 
+    li 
+      a.toggle-submenu(href='#') 
+        | Misc
+        i.fa-solid.fa-angle-right
+      ul.child-links.list-unstyled
+        li: a(href="#") Loading 
+        li: a(href="#") Breadcrumbs 
+
