--- a/stage/css/sass/layout/_global.scss
+++ b/stage/css/sass/layout/_global.scss
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
 }
+body {
+  font-family: "Open Sans", sans-serif;
+}
 .page {
   min-height: 100vh;
   .content-area {
