--- a/stage/html/pug/layout/style.pug
+++ b/stage/html/pug/layout/style.pug
@@ -1,3 +1,4 @@
-link(rel="stylesheet" href="css/main.css")
 link(rel="stylesheet" href="css/bootstrap.min.css")
+link(rel="stylesheet" href="css/main.css")
+link(rel=stylesheet , href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap")
 script(src="https://kit.fontawesome.com/f97b7ad4e5.js" crossorigin="anonymous")
